Exclude target column from feature set

--- a/ml/predictMaintenance.ipynb
+++ b/ml/predictMaintenance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-04-01 T16:29 Z</th>\n",
+       "      <td>2019-04-01 T16:29 Z</td>\n",
        "      <td>1813</td>\n",
        "      <td>101</td>\n",
        "      <td>4.291843</td>\n",
@@ -99,14 +99,14 @@
        "2019-04-01 T16:29 Z                     0              6  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "DATA=\"\"\"Timestamp, ID, Temperature(celsius), Target_Temperature(celsius), Power, PowerConsumption, ContentType, O2, CO2, Time_Door_Open, Maintenance_Required, Defrost_Cycle\"\"\"+\"\\n\"+\"\"\"2019-04-01 T16:29 Z,1813, 101, 4.291843460900875,4.4,2.870278314651876,10.273342381017777,3,4334.920958996634,4.9631508046318755,1,0,6\"\"\"\n",
-    "    \n",
+    "\n",
     "print('Data: ' + DATA)\n",
     "TESTDATA = StringIO(DATA)\n",
     "data = pd.read_csv(TESTDATA, sep=\",\")\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,17 +129,14 @@
       "                        Power  PowerConsumption  ContentType           O2  \\\n",
       "2019-04-01 T16:29 Z  2.870278         10.273342            3  4334.920959   \n",
       "\n",
-      "                          CO2  Time_Door_Open  Maintenance_Required  \\\n",
-      "2019-04-01 T16:29 Z  4.963151               1                     0   \n",
-      "\n",
-      "                     Defrost_Cycle  \n",
-      "2019-04-01 T16:29 Z              6  \n"
+      "                          CO2  Time_Door_Open  Defrost_Cycle  \n",
+      "2019-04-01 T16:29 Z  4.963151               1              6  \n"
      ]
     }
    ],
    "source": [
     "# create a Python list of feature names\n",
-    "feature_cols = ['Temperature(celsius)','Target_Temperature(celsius)','Power','PowerConsumption','ContentType','O2','CO2','Time_Door_Open','Maintenance_Required','Defrost_Cycle']\n",
+    "feature_cols = ['Temperature(celsius)','Target_Temperature(celsius)','Power','PowerConsumption','ContentType','O2','CO2','Time_Door_Open','Defrost_Cycle']\n",
     "# use the list to select a subset of the original DataFrame\n",
     "X = data[feature_cols]\n",
     "print( X )\n",
@@ -150,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,12 +174,10 @@
       "                        Power  PowerConsumption  ContentType           O2  \\\n",
       "2019-04-01 T16:29 Z  2.870278         10.273342            3  4334.920959   \n",
       "\n",
-      "                          CO2  Time_Door_Open  Maintenance_Required  \\\n",
-      "2019-04-01 T16:29 Z  4.963151               1                     0   \n",
-      "\n",
-      "                     Defrost_Cycle  \n",
-      "2019-04-01 T16:29 Z              6  \n",
-      "prediction is: [1]\n"
+      "                          CO2  Time_Door_Open  Defrost_Cycle  \n",
+      "2019-04-01 T16:29 Z  4.963151               1              6  \n",
+      "prediction is: [1]\n",
+      "actual value is:  [0]\n"
      ]
     }
    ],
@@ -191,6 +186,7 @@
     "print (\"X= \",X)\n",
     "y_pred = model.predict(X)\n",
     "print ('prediction is:', y_pred)\n",
+    "print ('actual value is: ', y.to_numpy())\n",
     "#y_pred.shape\n",
     "#print(np.sqrt(metrics.mean_squared_error(y, y_pred)))"
    ]
@@ -219,9 +215,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
