Remove maintenance_required from features list

--- a/ml/model_logistic_regression.ipynb
+++ b/ml/model_logistic_regression.ipynb
@@ -247,7 +247,7 @@
    ],
    "source": [
     "# Convert dataset into array for the independent variables (features)\n",
-    "X = np.asarray(data[['temperature','target_temperature','ambiant_temperature','oxygen_level','carbon_dioxide_level','humidity_level','nitrogen_level','vent_1','vent_2','vent_3','kilowatts','content_type','time_door_open','maintenance_required','defrost_cycle']])\n",
+    "X = np.asarray(data[['temperature','target_temperature','ambiant_temperature','oxygen_level','carbon_dioxide_level','humidity_level','nitrogen_level','vent_1','vent_2','vent_3','kilowatts','content_type','time_door_open','defrost_cycle']])\n",
     "X[0:5]"
    ]
   },
