--- a/ml/model_logistic_regression-pg.ipynb
+++ b/ml/model_logistic_regression-pg.ipynb
@@ -782,7 +782,7 @@
     }
    ],
    "source": [
-    "print (classification_report(y_test, yhat))\n"
+    "print (classification_report(y_test, predictions))\n"
    ]
   },
   {
