work on improving the model

--- a/ml/predictMaintenance.ipynb
+++ b/ml/predictMaintenance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data: Timestamp, ID, Temperature(celsius), Target_Temperature(celsius), Power, PowerConsumption, ContentType, O2, CO2, Time_Door_Open, Maintenance_Required, Defrost_Cycle\n",
-      "2019-04-01 T16:29 Z,1813, 101, 4.291843460900875,4.4,2.870278314651876,10.273342381017777,3,4334.920958996634,4.9631508046318755,1,0,6\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -51,33 +43,37 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Temperature(celsius)</th>\n",
-       "      <th>Target_Temperature(celsius)</th>\n",
-       "      <th>Power</th>\n",
-       "      <th>PowerConsumption</th>\n",
-       "      <th>ContentType</th>\n",
-       "      <th>O2</th>\n",
-       "      <th>CO2</th>\n",
-       "      <th>Time_Door_Open</th>\n",
-       "      <th>Maintenance_Required</th>\n",
-       "      <th>Defrost_Cycle</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>target_temperature</th>\n",
+       "      <th>ambiant_temperature</th>\n",
+       "      <th>oxygen_level</th>\n",
+       "      <th>carbon_dioxide_level</th>\n",
+       "      <th>humidity_level</th>\n",
+       "      <th>nitrogen_level</th>\n",
+       "      <th>vent_1</th>\n",
+       "      <th>vent_2</th>\n",
+       "      <th>vent_3</th>\n",
+       "      <th>kilowatts</th>\n",
+       "      <th>content_type</th>\n",
+       "      <th>time_door_open</th>\n",
+       "      <th>defrost_cycle</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-04-01 T16:29 Z</th>\n",
-       "      <td>1813</td>\n",
-       "      <td>101</td>\n",
+       "      <th>0</th>\n",
        "      <td>4.291843</td>\n",
        "      <td>4.4</td>\n",
-       "      <td>2.870278</td>\n",
-       "      <td>10.273342</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4334.920959</td>\n",
-       "      <td>4.963151</td>\n",
-       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>59</td>\n",
+       "      <td>10</td>\n",
+       "      <td>78</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.40775</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
@@ -86,71 +82,71 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Timestamp   ID  Temperature(celsius)  \\\n",
-       "2019-04-01 T16:29 Z       1813  101              4.291843   \n",
+       "   temperature  target_temperature  ambiant_temperature  oxygen_level  \\\n",
+       "0     4.291843                 4.4                   18           0.8   \n",
        "\n",
-       "                     Target_Temperature(celsius)     Power  PowerConsumption  \\\n",
-       "2019-04-01 T16:29 Z                          4.4  2.870278         10.273342   \n",
+       "   carbon_dioxide_level  humidity_level  nitrogen_level  vent_1  vent_2  \\\n",
+       "0                    59              10              78    True    True   \n",
        "\n",
-       "                     ContentType           O2       CO2  Time_Door_Open  \\\n",
-       "2019-04-01 T16:29 Z            3  4334.920959  4.963151               1   \n",
-       "\n",
-       "                     Maintenance_Required  Defrost_Cycle  \n",
-       "2019-04-01 T16:29 Z                     0              6  "
+       "   vent_3  kilowatts  content_type  time_door_open  defrost_cycle  \n",
+       "0    True    3.40775             2               0              6  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DATA=\"\"\"Timestamp, ID, Temperature(celsius), Target_Temperature(celsius), Power, PowerConsumption, ContentType, O2, CO2, Time_Door_Open, Maintenance_Required, Defrost_Cycle\"\"\"+\"\\n\"+\"\"\"2019-04-01 T16:29 Z,1813, 101, 4.291843460900875,4.4,2.870278314651876,10.273342381017777,3,4334.920958996634,4.9631508046318755,1,0,6\"\"\"\n",
-    "    \n",
-    "print('Data: ' + DATA)\n",
+    "DATA='''\n",
+    "temperature,target_temperature,ambiant_temperature,oxygen_level,carbon_dioxide_level,humidity_level,nitrogen_level,vent_1,vent_2,vent_3,kilowatts,content_type,time_door_open,defrost_cycle\n",
+    "''' + \"\\n\" + '''\n",
+    "4.291843460900875,4.4,18,.8, 59, 10, 78,True,True,True,3.4077503,2,0,6\n",
+    "'''\n",
+    "\n",
     "TESTDATA = StringIO(DATA)\n",
     "data = pd.read_csv(TESTDATA, sep=\",\")\n",
-    "data.columns = data.columns.to_series().apply(lambda x: x.strip())\n",
+    "# data.columns = data.columns.to_series().apply(lambda x: x.strip())\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     Temperature(celsius)  Target_Temperature(celsius)  \\\n",
-      "2019-04-01 T16:29 Z              4.291843                          4.4   \n",
+      "   temperature  target_temperature  ambiant_temperature  kilowatts  \\\n",
+      "0     4.291843                 4.4                   18    3.40775   \n",
       "\n",
-      "                        Power  PowerConsumption  ContentType           O2  \\\n",
-      "2019-04-01 T16:29 Z  2.870278         10.273342            3  4334.920959   \n",
+      "   time_door_open  content_type  defrost_cycle  oxygen_level  nitrogen_level  \\\n",
+      "0               0             2              6           0.8              78   \n",
       "\n",
-      "                          CO2  Time_Door_Open  Maintenance_Required  \\\n",
-      "2019-04-01 T16:29 Z  4.963151               1                     0   \n",
-      "\n",
-      "                     Defrost_Cycle  \n",
-      "2019-04-01 T16:29 Z              6  \n"
+      "   humidity_level  carbon_dioxide_level  vent_1  vent_2  vent_3  \n",
+      "0              10                    59    True    True    True  \n"
      ]
     }
    ],
    "source": [
     "# create a Python list of feature names\n",
-    "feature_cols = ['Temperature(celsius)','Target_Temperature(celsius)','Power','PowerConsumption','ContentType','O2','CO2','Time_Door_Open','Maintenance_Required','Defrost_Cycle']\n",
+    "feature_cols = [\"temperature\",\"target_temperature\", \"ambiant_temperature\", \n",
+    "                \"kilowatts\", \"time_door_open\",\n",
+    "                \"content_type\", \"defrost_cycle\",\n",
+    "                \"oxygen_level\", \"nitrogen_level\", \"humidity_level\",\"carbon_dioxide_level\", \n",
+    "                \"vent_1\", \"vent_2\", \"vent_3\"]\n",
     "# use the list to select a subset of the original DataFrame\n",
     "X = data[feature_cols]\n",
     "print( X )\n",
-    "y = data['Maintenance_Required']\n",
     "\n",
     "# print the first 5 rows\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,25 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X=                       Temperature(celsius)  Target_Temperature(celsius)  \\\n",
-      "2019-04-01 T16:29 Z              4.291843                          4.4   \n",
+      "X=     temperature  target_temperature  ambiant_temperature  kilowatts  \\\n",
+      "0     4.291843                 4.4                   18    3.40775   \n",
       "\n",
-      "                        Power  PowerConsumption  ContentType           O2  \\\n",
-      "2019-04-01 T16:29 Z  2.870278         10.273342            3  4334.920959   \n",
+      "   time_door_open  content_type  defrost_cycle  oxygen_level  nitrogen_level  \\\n",
+      "0               0             2              6           0.8              78   \n",
       "\n",
-      "                          CO2  Time_Door_Open  Maintenance_Required  \\\n",
-      "2019-04-01 T16:29 Z  4.963151               1                     0   \n",
-      "\n",
-      "                     Defrost_Cycle  \n",
-      "2019-04-01 T16:29 Z              6  \n",
-      "prediction is: [1]\n"
+      "   humidity_level  carbon_dioxide_level  vent_1  vent_2  vent_3  \n",
+      "0              10                    59    True    True    True  \n",
+      "prediction is: [0]\n"
      ]
     }
    ],
