--- a/ml/model_logistic_regression.ipynb
+++ b/ml/model_logistic_regression.ipynb
@@ -222,22 +222,21 @@
     {
      "data": {
       "text/plain": [
-       "array([[6.421549890228215, 6, 20.875069365764087, 22.58295531772213,\n",
-       "        2.2973638095227984, 59.751719952413076, 78.41441344522265, True,\n",
-       "        True, True, 5.104784197507562, 2, -0.8497332867479737, 6],\n",
-       "       [5.856867982999519, 6, 21.128386514434453, 21.50182356620862,\n",
-       "        3.7820314725518687, 61.570283077498324, 78.44983017162953, True,\n",
-       "        True, True, 5.122725186553819, 2, 0.6177872500681656, 5],\n",
-       "       [5.6567203017250645, 6, 21.17157194147064, 20.104576413467306,\n",
-       "        5.868899231921329, 61.443442975167926, 77.77180209085563, True,\n",
-       "        True, True, 2.8296373416999665, 2, 2.1193136207321763, 6],\n",
-       "       [6.053072053811502, 6, 20.66511333708939, 19.03929674511865,\n",
-       "        4.518827086315096, 60.30097139281394, 75.70453406968731, True,\n",
-       "        True, True, 1.9873873990101083, 2, 1.1033503981140276, 4],\n",
-       "       [6.409695831798644, 6, 21.025120550360636, 21.07541132606288,\n",
-       "        4.676923640456226, 59.725525490850856, 78.6855392897819, True,\n",
-       "        True, True, 2.8987050654962543, 2, 0.8614187105485169, 5]],\n",
-       "      dtype=object)"
+       "array([[ 6.42154989,  6.        , 20.87506937, 22.58295532,  2.29736381,\n",
+       "        59.75171995, 78.41441345,  5.1047842 ,  2.        , -0.84973329,\n",
+       "         6.        ],\n",
+       "       [ 5.85686798,  6.        , 21.12838651, 21.50182357,  3.78203147,\n",
+       "        61.57028308, 78.44983017,  5.12272519,  2.        ,  0.61778725,\n",
+       "         5.        ],\n",
+       "       [ 5.6567203 ,  6.        , 21.17157194, 20.10457641,  5.86889923,\n",
+       "        61.44344298, 77.77180209,  2.82963734,  2.        ,  2.11931362,\n",
+       "         6.        ],\n",
+       "       [ 6.05307205,  6.        , 20.66511334, 19.03929675,  4.51882709,\n",
+       "        60.30097139, 75.70453407,  1.9873874 ,  2.        ,  1.1033504 ,\n",
+       "         4.        ],\n",
+       "       [ 6.40969583,  6.        , 21.02512055, 21.07541133,  4.67692364,\n",
+       "        59.72552549, 78.68553929,  2.89870507,  2.        ,  0.86141871,\n",
+       "         5.        ]])"
       ]
      },
      "execution_count": 3,
@@ -247,7 +246,7 @@
    ],
    "source": [
     "# Convert dataset into array for the independent variables (features)\n",
-    "X = np.asarray(data[['temperature','target_temperature','ambiant_temperature','oxygen_level','carbon_dioxide_level','humidity_level','nitrogen_level','vent_1','vent_2','vent_3','kilowatts','content_type','time_door_open','defrost_cycle']])\n",
+    "X = np.asarray(data[['temperature','target_temperature','ambiant_temperature','oxygen_level','carbon_dioxide_level','humidity_level','nitrogen_level','kilowatts','content_type','time_door_open','defrost_cycle']])\n",
     "X[0:5]"
    ]
   },
@@ -308,20 +307,20 @@
      "data": {
       "text/plain": [
        "array([[ 0.42846617,  0.        ,  0.86228574,  1.16463912, -1.37615722,\n",
-       "        -0.23170658,  0.42300313,  0.09879789,  0.09879789,  0.09879789,\n",
-       "         2.3531473 ,  0.        , -1.84256777,  1.36547519],\n",
+       "        -0.23170658,  0.42300313,  2.3531473 ,  0.        , -1.84256777,\n",
+       "         1.36547519],\n",
        "       [-0.13644282,  0.        ,  1.1139979 ,  0.41603848, -0.23052444,\n",
-       "         1.570928  ,  0.4587289 ,  0.09879789,  0.09879789,  0.09879789,\n",
-       "         2.37044643,  0.        , -0.37366259,  0.47378482],\n",
+       "         1.570928  ,  0.4587289 ,  2.37044643,  0.        , -0.37366259,\n",
+       "         0.47378482],\n",
        "       [-0.33667099,  0.        ,  1.15690971, -0.55144779,  1.37979157,\n",
-       "         1.44519888, -0.22521571,  0.09879789,  0.09879789,  0.09879789,\n",
-       "         0.15939682,  0.        ,  1.12928051,  1.36547519],\n",
+       "         1.44519888, -0.22521571,  0.15939682,  0.        ,  1.12928051,\n",
+       "         1.36547519],\n",
        "       [ 0.05984015,  0.        ,  0.65365997, -1.28907208,  0.33801842,\n",
-       "         0.31273404, -2.31052291,  0.09879789,  0.09879789,  0.09879789,\n",
-       "        -0.65272052,  0.        ,  0.1123587 , -0.41790556],\n",
+       "         0.31273404, -2.31052291, -0.65272052,  0.        ,  0.1123587 ,\n",
+       "        -0.41790556],\n",
        "       [ 0.41660734,  0.        ,  1.01138622,  0.12078078,  0.46001245,\n",
-       "        -0.25767161,  0.69649484,  0.09879789,  0.09879789,  0.09879789,\n",
-       "         0.22599355,  0.        , -0.12980126,  0.47378482]])"
+       "        -0.25767161,  0.69649484,  0.22599355,  0.        , -0.12980126,\n",
+       "         0.47378482]])"
       ]
      },
      "execution_count": 6,
@@ -346,8 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set: (7200, 14) (7200,)\n",
-      "Test set: (1800, 14) (1800,)\n"
+      "Train set: (7200, 11) (7200,)\n",
+      "Test set: (1800, 11) (1800,)\n"
      ]
     }
    ],
