old key removed

--- a/ml/kafka-to-panda.ipynb
+++ b/ml/kafka-to-panda.ipynb
@@ -24,7 +24,7 @@
     "                'security.protocol' : 'SASL_SSL',\n",
     "                'sasl.mechanisms': 'PLAIN',\n",
     "                'sasl.username': 'token',\n",
-    "                'sasl.password': '98YA5dC-G6cODJtRFPJwi4DwNbwZABmsrSFI115jP6k5'\n",
+    "                'sasl.password': ''\n",
     "        }\n",
     "consumer = Consumer(options)\n",
     "consumer.subscribe(['reeferTelemetries'])"
