Update referenced Kafka topic names to lower-case for reeferTelemetry topic
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/ml/kafka-to-panda.ipynb
+++ b/ml/kafka-to-panda.ipynb
@@ -27,7 +27,7 @@
     "                'sasl.password': ''\n",
     "        }\n",
     "consumer = Consumer(options)\n",
-    "consumer.subscribe(['reeferTelemetries'])"
+    "consumer.subscribe(['reefer-telemetry'])"
    ]
   },
   {
